对阶段二的前端进行构建 并做修改 接下来将进行代码阅读理解工作
